fix alignment prevent scale

--- a/styles.scss
+++ b/styles.scss
@@ -251,7 +251,7 @@ body {
 
   code {
     max-width: 100%;
-    margin-bottom: -3px;
+    vertical-align: bottom;
     overflow: auto;
     display: inline-block;
     background-color: #f8f8f8;
